--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -68,7 +68,7 @@
                                     <a href="#">{{ product.name }}</a>
                                 </h4>
                                 <h5>{{ product.price }}</h5>
-                                <p class="card-text">{{ product.description }}</p>
+                                <p class="card-text">{{ product.short_description }}</p>
 
                             </div>
                             <div class="card-footer text-center">
