--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -37,7 +37,7 @@
                 </li>
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'auth:edit' %}"> {{ user.username }}
+                        <a class="nav-link" href="{% url 'auth:profile' %}"> {{ user.username }}
                             <i class="fas fa-user-circle"></i>
                         </a>
                     </li>
