--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -72,7 +72,9 @@
 
                             </div>
                             <div class="card-footer text-center">
-                                <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
+                                <a href="{% url 'basket:basket_add' product.id %}">
+                                    <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
+                                </a>
                             </div>
                         </div>
                     </div>
