--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -1,7 +1,7 @@
 {% if baskets %}
     <div class="col-lg-5">
         <h4 class="mt-3 mb-3 d-flex justify-content-between align-items-center mb-3">
-            Корзина <span class="badge badge-secondary badge-pill">{{ baskets|length }}</span>
+            Корзина <span class="badge badge-secondary badge-pill">{{ baskets.0.total_quantity }}</span>
         </h4>
         {% for basket in baskets %}
            <div class="card mb-3">
@@ -16,7 +16,7 @@
                             <input name="basketID" type="number" class="form-control"
                                    value="{{ basket.quantity }}" min="0">
                         </div>
-                        <div class="col-lg-4">{{ basket.sum }}</div>
+                        <div class="col-lg-4">{{ basket.sum }} руб.</div>
                         <div class="col-lg-4">
                             <a href="{% url 'basket:basket_remove' basket.id %}">
                                 <i class="fas fa-trash"></i>
@@ -30,7 +30,7 @@
         <div class="card mb-3">
             <div class="card-footer">
                 <p class="float-left">Итого</p>
-                <h4 class="float-right">2 390 руб.</h4>
+                <h4 class="float-right">{{ baskets.0.total_sum }} руб.</h4>
             </div>
         </div>
 
