--- a/authapp/templates/authapp/profile.html
+++ b/authapp/templates/authapp/profile.html
@@ -6,15 +6,16 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+    <div class="container">
         <div class="row">
             <div class="col-lg-7">
                 <h4 class="mt-3 mb-3">Профиль</h4>
                 <div class="col-lg-12 text-center">
                     <img width="100" height="100"
-                         src="{% if user.avatar %}{{ user.avatar.url }}{% else %}{% static 'vendor/img/users/default_avatar.jpg'%}{% endif %}"
+                         src="
+                                 {% if user.avatar %}{{ user.avatar.url }}{% else %}{% static 'vendor/img/users/default_avatar.jpg' %}{% endif %}"
                          class="img-thumbnail"
-                    alt="photo">
+                         alt="photo">
                 </div>
                 <form action="{% url 'auth:profile' %}" method="post">
                     {% csrf_token %}
@@ -58,7 +59,13 @@
                     </div>
                 </form>
             </div>
-    {% include 'basket/basket.html' %}
+            <div class="col-lg-5">
+                {% include 'basket/basket.html' %}
+            </div>
+        </div>
     </div>
-    </div>
+{% endblock %}
+
+{% block scripts %}
+    <script src="{% static 'js/basket.js' %}"></script>
 {% endblock %}
