--- a/adminapp/templates/adminapp/admin-users-read.html
+++ b/adminapp/templates/adminapp/admin-users-read.html
@@ -47,7 +47,7 @@
                             {% else %}
                                 <td class="text-center"><i class="fas fa-times-circle"></i></td>
                             {% endif %}
-      
+
                         </tr>
                     {% endfor %}
                     </tbody>
@@ -55,7 +55,9 @@
             </div>
         </div>
         <div class="card-footer">
-            <button class="btn btn-success">Создать пользователя</button>
+            <a href="{% url 'admins:admin_users_create' %}">
+                <button class="btn btn-success">Создать пользователя</button>
+            </a>
         </div>
     </div>
 {% endblock %}
