--- a/adminapp/templates/adminapp/admin-users-update-delete.html
+++ b/adminapp/templates/adminapp/admin-users-update-delete.html
@@ -3,7 +3,8 @@
 {% block content %}
     <h1 class="mt-4">Редактирование пользователя | {{ current_user.username }}</h1>
     <div class="card-body">
-        <form action="{% url 'admins:admin_users_update' current_user.id %}" method="post" enctype="multipart/form-data">
+        <form action="{% url 'admins:admin_users_update' current_user.id %}" method="post"
+              enctype="multipart/form-data">
             {% csrf_token %}
             <div class="form-row">
                 <div class="col-lg-6">
@@ -40,13 +41,17 @@
                 </div>
             </div>
             <div class="form-row">
-                <div class="col-lg-6" style="margin-top: 33px;">
+                <div class="col-lg-12" style="margin-top: 33px;">
                     <input class="btn btn-info btn-block" type="submit" value="Сохранить">
-                </div>
-                <div class="col-lg-6" style="margin-top: 33px;">
-                    <input class="btn btn-danger btn-block" type="submit" value="Удалить">
                 </div>
             </div>
         </form>
+        <div class="form-row">
+            <div class="col-lg-12" style="margin-top: 33px;">
+                <a href="{% url 'admins:admin_users_delete' current_user.id %}">
+                    <button class="btn btn-danger btn-block">Удалить</button>
+                </a>
+            </div>
+        </div>
     </div>
 {% endblock %}
