--- a/adminapp/templates/adminapp/admin-products-read.html
+++ b/adminapp/templates/adminapp/admin-products-read.html
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div class="card-footer">
-            <button class="btn btn-success">Создать продукт</button>
+            <a href="{% url 'admins:admin_products_create' %}" class="btn btn-success">Создать продукт</a>
         </div>
     </div>
 {% endblock %}
