--- a/adminapp/templates/adminapp/admin-products-read.html
+++ b/adminapp/templates/adminapp/admin-products-read.html
@@ -38,7 +38,7 @@
                     {% for product in products %}
                         <tr>
                             <td>
-                                <a href="#" style="color: dodgerblue">{{ product.name }}</a>
+                                <a href="{% url 'admins:admin_products_update' product.id%}" style="color: dodgerblue">{{ product.name }}</a>
                             </td>
                             <td>{{ product.category }}</td>
                             <td>{{ product.price }}</td>
