--- a/adminapp/templates/adminapp/admin-products-update-delete.html
+++ b/adminapp/templates/adminapp/admin-products-update-delete.html
@@ -42,13 +42,18 @@
                     <label class="small mb-1" for="{{ form.price.id_for_label }}">Цена</label>
                     {{ form.price }}
                 </div>
-                <div class="col-lg-4">
-                    <label class="small mb-1" for="{{ form.short_description.id_for_label }}">Краткое описание</label>
-                    {{ form.short_description }}
-                </div>
-                <div class="col-lg-8">
-                    <label class="small mb-1" for="{{ form.full_description.id_for_label }}">Полное описание</label>
-                    {{ form.full_description }}
+
+                    <div class="col-lg-12">
+                        <label class="small mb-1" for="{{ form.short_description.id_for_label }}">Краткое
+                            описание</label>
+                        {{ form.short_description }}
+                    </div>
+
+                <div class="form-row">
+                    <div class="col-lg-12">
+                        <label class="small mb-1" for="{{ form.description.id_for_label }}">Полное описание</label>
+                        {{ form.description }}
+                    </div>
                 </div>
             </div>
             <div class="form-row">
