--- a/adminapp/templates/adminapp/admin-products-create.html
+++ b/adminapp/templates/adminapp/admin-products-create.html
@@ -49,13 +49,15 @@
             </div>
         </div>
         <div class="form-row">
-            <div class="col-lg-4">
+            <div class="col-lg-12">
                 <label class="small mb-1" for="{{ form.short_description.id_for_label }}">Короткое описание</label>
                 {{ form.short_description }}
             </div>
-            <div class="col-lg-8">
-                <label class="small mb-1" for="{{ form.full_description.id_for_label }}"                >Полное описание</label>
-                {{ form.full_description }}
+            <div class="form-row">
+                <div class="col-lg-12">
+                    <label class="small mb-1" for="{{ form.description.id_for_label }}">Полное описание</label>
+                    {{ form.description }}
+                </div>
             </div>
         </div>
         <div class="form-row">
