FBV-->CBV for users

--- a/adminapp/templates/adminapp/admin-users-update-delete.html
+++ b/adminapp/templates/adminapp/admin-users-update-delete.html
@@ -1,9 +1,9 @@
 {% extends 'adminapp/base.html' %}
 
 {% block content %}
-    <h1 class="mt-4">Редактирование пользователя | {{ current_user.username }}</h1>
+    <h1 class="mt-4">Редактирование пользователя | {{ user.username }}</h1>
     <div class="card-body">
-        <form action="{% url 'admins:admin_users_update' current_user.id %}" method="post"
+        <form action="{% url 'admins:admin_users_update' user.id %}" method="post"
               enctype="multipart/form-data">
             {% csrf_token %}
             <div class="form-row">
@@ -48,9 +48,10 @@
         </form>
         <div class="form-row">
             <div class="col-lg-12" style="margin-top: 33px;">
-                <a href='{% url 'admins:admin_users_delete' current_user.id %}' class="btn btn-danger btn-block">
-                    Удалить
-                </a>
+                <form action="{% url 'admins:admin_users_delete' user.id %}" method="post">
+                    {% csrf_token %}
+                    <input class="btn btn-danger btn-block" type="submit" value="Удалить">
+                </form>
             </div>
         </div>
     </div>
