--- a/adminapp/templates/adminapp/admin-products-update-delete.html
+++ b/adminapp/templates/adminapp/admin-products-update-delete.html
@@ -1,9 +1,9 @@
 {% extends 'adminapp/base.html' %}
 
 {% block content %}
-    <h1 class="mt-4">Редактирование продукта | {{ current_product.name }}</h1>
+    <h1 class="mt-4">Редактирование продукта | {{ product.name }}</h1>
     <div class="card-body">
-        <form action="{% url 'admins:admin_products_update' current_product.id %}" method="post"
+        <form action="{% url 'admins:admin_products_update' product.id %}" method="post"
               enctype="multipart/form-data">
             {% csrf_token %}
             <div class="form-row">
@@ -43,11 +43,11 @@
                     {{ form.price }}
                 </div>
 
-                    <div class="col-lg-12">
-                        <label class="small mb-1" for="{{ form.short_description.id_for_label }}">Краткое
-                            описание</label>
-                        {{ form.short_description }}
-                    </div>
+                <div class="col-lg-12">
+                    <label class="small mb-1" for="{{ form.short_description.id_for_label }}">Краткое
+                        описание</label>
+                    {{ form.short_description }}
+                </div>
 
                 <div class="form-row">
                     <div class="col-lg-12">
@@ -68,7 +68,10 @@
         </form>
         <div class="form-row">
             <div class="col-lg-12" style="margin-top: 33px">
-                <a href="{% url 'admins:admin_products_delete' current_product.id %}" class="btn btn-danger btn-block">Удалить</a>
+                <form action="{% url 'admins:admin_products_delete' product.id %}" method="post">
+                    {% csrf_token %}
+                    <input class="btn btn-danger btn-block" type="submit" value="Удалить">
+                </form>
             </div>
         </div>
     </div>
